# opensourcelaw

./: .gitignore  AGENTS.md  README.md  compose.dev.yaml  flake.nix  opencode.json  pyproject.toml  todo.md  workspace.yaml
.zed/: settings.json  tasks.json
config/: retsinformation.sources.example.json
data/learning/: greeting.txt
data/learning/daily_notes/: 2026-07-05.txt  2026-07-06.txt
data/learning/daily_raw_pages/2026-07-05/: page_1.html  page_2.html  page_3.html
data/learning/daily_raw_pages/2026-07-06/: page_1.html  page_2.html  page_3.html
data/learning/raw_pages/: page_1.html  page_10.html  page_2.html  page_3.html  page_4.html  page_5.html  page_6.html  page_7.html  page_8.html  page_9.html
src/: definitions.py  learning.py  resources.py
src/assets/retsinformation/: document.py  documents.py  documents_parsed.py  documents_raw.py  documents_sqlite.py  downloader.py  pages.py  sitemap.py  sitemap_index.py  sitemap_pages.py
src/opensourcelaw/: __init__.py  definitions.py  resources.py
src/opensourcelaw/assets/: __init__.py  retsinformation.py
src/opensourcelaw/retsinformation/: __init__.py  change_detection.py  config.py  discovery.py  fetch.py  http.py  models.py  storage.py
src/resources/: __init__.py  dotnet.py  http.py  learning.py  s3.py
tests/: test_definitions.py  test_resources_s3.py  test_retsinformation_ingest.py  test_retsinformation_parsed_s3.py  test_retsinformation_raw_s3.py  test_retsinformation_sqlite.py
tools/: retsinformation_downloader.cs  retsinformation_sitemap_pages.cs  retsinformation_xml_parser.cs
tools/shared/: Common.cs  OpenSourceLaw.Tools.csproj
