[project]
name = "opensourcelaw"
version = "0.1.0"
description = "Dagster data pipelines for opensourcelaw."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "dagster>=1.13,<2.0",
  "dagster-webserver>=1.13,<2.0",
  "defusedxml>=0.7.1",
]

[dependency-groups]
dev = [
  "dagster-dg-cli>=1.13,<2.0",
  "pytest>=8.0",
]

[tool.uv]
constraint-dependencies = [
  # grpcio-health-checking 1.82.0 currently ships generated protobuf code
  # that is newer than the protobuf runtime it resolves with.
  "grpcio-health-checking<1.82",
]

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.dagster]
module_name = "definitions"

[tool.pytest.ini_options]
pythonpath = ["."]
